Style: fix container overflow and scrolling

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
-/* Todo: fix container overflow out of body */
 .flex-container {
   display: flex;
   height: 100vh;
@@ -33,7 +32,7 @@ body {
   border-radius: 5px;
   padding: 1em;
   text-align: center;
-  overflow-y: scroll;
+  overflow: auto;
 }
 
 .recipe-title {
